--- a/hi.html
+++ b/hi.html
@@ -35,7 +35,7 @@
 </head>
 <body>
     <div class="bubble" id="bubble">
-        <iframe src="http://localhost:8501/"></iframe>
+        <iframe src="https://19f6-196-1-1-7.ngrok-free.app"></iframe>
     </div>
 
     <script>
